--- a/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -777,7 +777,7 @@
     }
    ],
    "source": [
-    "%sql SELECT SUM(CASE WHEN Mission_Outcome LIKE '%Success%' THEN 1 ELSE 0 END) AS Successful_Missions, SUM(CASE WHEN Mission_Outcome = 'Failure (in flight)' THEN 1 ELSE 0 END) AS Failed_Missions FROM spacextbl;\n"
+    "%sql SELECT SUM(CASE WHEN Mission_Outcome LIKE '%Success%' THEN 1 ELSE 0 END) AS Successful_Missions, SUM(CASE WHEN Mission_Outcome LIKE '%Failure%' THEN 1 ELSE 0 END) AS Failed_Missions FROM spacextbl;\n"
    ]
   },
   {
